<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TravelApp</string>
    <string name="action_settings">Settings</string>
    <string name="check_in">Check in</string>
    <string name="check_out">Check out</string>
    <string name="title_activity_check_in">CheckInActivity</string>
    <string name="go_to_check_in">Go to check in</string>
    <string name="title_activity_check_out">CheckOutActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="start_location">Select a start location</string>
    <string name="end_location">Select an end location</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="select">Select</string>
    <string name="title_activity_web">WebActivity</string>
    <string name="title_log_listing">Log</string>
    <string name="title_activity_pref_fragment">PrefFragment</string>
    <string name="title_activity_invite">InviteActivity</string>
    <string name="invite_button">Invite a friend</string>

</resources>
